@@ -334,6 +334,8 @@ void IIIF::run( Session* session, const string& src )
       // Calculate the width and height of our region
       requested_width = session->view->getViewWidth();
       requested_height = session->view->getViewHeight();
+      float ratio = requested_width / requested_height;
+      unsigned int max_size = session->view->getMaxSize();
 
       // "full" request
       if ( sizeString == "full" ){
@@ -354,8 +356,6 @@ void IIIF::run( Session* session, const string& src )
       // "w,h", "w,", ",h", "!w,h" requests
       else{
 
-	unsigned int max_size = session->view->getMaxSize();
-
         // !w,h request - remove !, remember it and continue as if w,h request
         if ( sizeString.substr(0, 1) == "!" ) sizeString.erase(0, 1);
         // Otherwise tell our view to break aspect ratio
@@ -372,10 +372,9 @@ void IIIF::run( Session* session, const string& src )
         else if ( pos == 0 ){
           istringstream i( sizeString.substr( 1, string::npos ) );
           if ( !(i >> requested_height) ) throw invalid_argument( "invalid height" );
-	  if( requested_height > max_size ){
-	    requested_width = round( (float)max_size * session->view->getViewWidth() / session->view->getViewHeight() );
-	  }
-          else requested_width = round( (float)requested_height * session->view->getViewWidth() / session->view->getViewHeight() );
+	  requested_width = round( (float)requested_height * ratio );
+	  // Maintain aspect ratio in this case
+ 	  session->view->maintain_aspect = true;
         }
 
         // If comma is not at the beginning, we must have a "width,height" or "width," request
@@ -383,10 +382,9 @@ void IIIF::run( Session* session, const string& src )
         else if ( pos == sizeString.length() - 1 ){
           istringstream i( sizeString.substr( 0, string::npos - 1 ) );
           if ( !(i >> requested_width ) ) throw invalid_argument( "invalid width" );
-	  if( requested_width > max_size ){
-	    requested_height = round( (float)max_size * session->view->getViewHeight() / session->view->getViewWidth() );
-	  }
-          else requested_height = round( (float)requested_width * session->view->getViewHeight() / session->view->getViewWidth() );
+	  requested_height = round( (float)requested_width / ratio );
+	  // Maintain aspect ratio in this case
+ 	  session->view->maintain_aspect = true;
         }
 
         // Remaining case is "width,height"
@@ -404,6 +402,17 @@ void IIIF::run( Session* session, const string& src )
         throw invalid_argument( "IIIF: invalid size" );
       }
 
+      // Limit our requested size to the maximum allowable size if necessary
+      if( requested_width > max_size || requested_height > max_size ){
+	if( ratio > 1.0 ){
+	  requested_width = max_size;
+	  requested_height = session->view->maintain_aspect ? round(max_size*ratio) : max_size;
+	}
+	else{
+	  requested_height = max_size;
+	  requested_width = session->view->maintain_aspect ? round(max_size/ratio) : max_size;
+	}
+      }
 
       session->view->setRequestWidth( requested_width );
       session->view->setRequestHeight( requested_height );
